--- a/style.css
+++ b/style.css
@@ -111,6 +111,10 @@ line-height: 30px;
   z-index: 99;
 }
 
+.collapse.show ul {
+ margin-ton: 120px; 
+}
+
 #toggler{
   z-index: 999;
   display: none;
